fixed text vertical alignment.

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -21,5 +21,6 @@
     background: #fafafa;
     color: inherit;
     border-top: $border-dark;
+    height: 47px;
   }
 }
